--- a/zaliczenieBackend/zaliczenieBackend.csproj
+++ b/zaliczenieBackend/zaliczenieBackend.csproj
@@ -8,7 +8,12 @@
         <PackageReference Include="Hangfire" Version="1.8.0-beta4" />
         <PackageReference Include="Hangfire.Core" Version="1.8.0-beta4" />
         <PackageReference Include="Hangfire.MemoryStorage" Version="1.7.0" />
+        <PackageReference Include="Microsoft.Extensions.Diagnostics.HealthChecks" Version="6.0.6" />
         <PackageReference Include="Swashbuckle.AspNetCore" Version="5.6.3" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <Folder Include="wwwroot\Upload" />
     </ItemGroup>
 
 </Project>
